--- a/3rd_party/CMakeLists.txt
+++ b/3rd_party/CMakeLists.txt
@@ -1,4 +1,6 @@
-set(BENCHMARK_DOWNLOAD_DEPENDENCIES off CACHE STRING "")
-set(BENCHMARK_ENABLE_TESTING off CACHE STRING "")
+if(MENU_TEST)
+   set(BENCHMARK_DOWNLOAD_DEPENDENCIES off CACHE STRING "")
+   set(BENCHMARK_ENABLE_TESTING off CACHE STRING "")
 
-add_subdirectory(./benchmark)
+   add_subdirectory(./benchmark)
+endif()
