--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -3,6 +3,7 @@ pkg_check_modules(FMTLIB REQUIRED fmt)
 
 add_library(menu-lib STATIC
    menu/menu.hpp
-   menu/menu.cc)
+   menu/menu.cc
+   menu/function.hpp)
 target_include_directories(menu-lib PUBLIC ${PROJECT_SOURCE_DIR}/src ${FMTLIB_INCLUDE_DIRS})
 target_link_libraries(menu-lib ${FMTLIB_LIBRARIES})
